# tyche-api

./: .dockerignore  .env  .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md
.sqlx/: query-0be9fb9caa30bc8f5a4ab56838cc5c9ba654e3a86a800385ea140337a1a96381.json  query-0edf0689a2608f98bf24fed44bd6309a0de85b61acaf21db5657c3b0230d12d0.json  query-239d733b5d3bd18f857c6f0398de86a318a6f8bdf3c5b53c762ed181e9d03cd1.json  query-3119455c53ad0615ef73eeab5437a506d75084cd4cb94c7122532a7643cc99c1.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-90021aeecabde49e1c9d311201d55f6fa5a61abe178bddd7425ec9c4d2b8d361.json  query-932a0369a89dae960d4dde98c44c7aa2191847d755c4d8e1ed4f23ab4d97ced2.json  query-9ac17d9567609a0c1a95b73ef2410617442076c63de3e32400b0d37ccf5f773f.json  query-b6019471ff1989ef2f0658b0b34e683fdc706751e2bb69043544c9a4d08b5ba0.json  query-ba5daa065cbc781744400d3ce1d75d8d385f146fd9f0d47247b571a365e27b58.json  query-d08992cf2c132fedbed21b94d545e154fa2a7a2a2bf79fd033341d1bb5a6c0f2.json  query-fb9df6f9bfa170a14954ac25fd2b786c4d9dfd281217c24ce0974af5495bc757.json  query-ffeea7ee6dd21d4e2c9f2003287c5bcce374c11af6589992bccb0849ee8183c0.json
bruno/: Health Check.bru  bruno.json  create_post.bru  health_check.bru  read_post.bru
bruno/auth/: login.bru
bruno/environments/: dev.bru  prod.bru  staging.bru
bruno/like/: create_one.bru  delete_one.bru  folder.bru
bruno/login/: folder.bru  login.bru  logout.bru
bruno/post/: create_one.bru  create_post.bru  delete_post.bru  find_many_by_parent_id.bru  find_many_without_parents.bru  find_one_by_id.bru  read_post.bru  update_post.bru
bruno/user/: create_one.bru  (+7 more)
migrations/: 20250402013034_posts.down.sql  20250402013034_posts.up.sql  20250405002952_tables.down.sql  20250405002952_tables.up.sql  Dockerfile
src/: handlers.rs  main.rs  models.rs  repository.rs  routes.rs
(+37 files in other folders)
