[package]
name = "tyche"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
dotenv = "0.15.0"
actix-web = "4"
serde_json = "1.0"
futures = "0.3"
