[package]
name = "tyche"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tyche"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
regex = { version = "1.11.1" }
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = { version = "0.10.8" }
sqlx = { version = "0.7", default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "uuid",
] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
